--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Hello, World!</h1>
+  <font size="10">我是网站</font>
   <p>This is my personal website hosted on GitHub Pages.</p>
 </body>
 </html>
