--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Welcome to My GitHub Page</title>
 </head>
 <body>
-  <h1>Hello, World!</h1>
+  <h1>Hello, World! Hi, GitHub!</h1>
   <p>This is my personal website hosted on GitHub Pages.</p>
 </body>
 </html>
