--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <title>Welcome to My GitHub Page</title>
 </head>
 <body>
-  <h1>Hello, World! Hi, GitHub! 3nd modification. </h1>
+  <div class="header" style="padding-top:50px;">
+    <a style="font-size:23px; color:black">Research</a>
+    <a style="font-size:23px; color:black">Publication</a>
+    <a style="font-size:23px; color:black">People</a>
+    <a style="font-size:23px; color:black">Join</a>
+  </div>
   <p>This is my personal website hosted on GitHub Pages.</p>
 </body>
 </html>
