--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 个人网站</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    <title>网站测试</title>
+
+    <meta name="author" content="小植">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <style>
         * {
             margin: 0;
